# RawTCP

./: CMakeLists.txt  README.md  functions.c  functions.h  includes.h  main.c
client/: client.c
server/: server.c
